<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackground"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              tools:context=".presentation.ui.main.lesson.LessonActivity">

    <!-- TILE  Date picker -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:padding="16dp"
                android:src="@drawable/ic_user_birthday"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:text="12.02  ВІВТОРОК"
                android:textAllCaps="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="12:00"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_lesson_length"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/lesson_length_one_hour"
                android:textSize="18sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!-- TILE  Room -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="0dp">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_room_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_room_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_room_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_room_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_room_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_room_3" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_room_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_room_4" />

        </android.support.design.widget.TabLayout>

    </android.support.v7.widget.CardView>

    <!-- tile  COMMENT-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_radius">

        <LinearLayout
            android:id="@+id/panel_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_comment"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/hint_comment"
                    android:inputType="textCapSentences|textMultiLine"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!-- TILE  Lesson Type-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="0dp">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_lesson_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_type_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_lesson_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_type_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_lesson_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_type_3" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_lesson_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lesson_type_4" />

        </android.support.design.widget.TabLayout>

    </android.support.v7.widget.CardView>

    <!-- TILE  Adult / Child-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_weight="1"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_user_adult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_type_adult" />

                <android.support.design.widget.TabItem
                    android:id="@+id/tab_user_child"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_type_child" />

            </android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>


