<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_filter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:baselineAligned="true"
            android:focusableInTouchMode="false"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="4dp"
                android:src="@drawable/ic_filter"
                tools:ignore="ContentDescription"
                tools:visibility="visible" />

            <CheckBox
                android:id="@+id/check_box_my"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:hint="@string/hint_my"
                android:textSize="14sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edit_filter_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/hint_filter_by_name"
                android:inputType="textCapWords"
                android:nextFocusLeft="@+id/edit_filter_name"
                android:nextFocusUp="@+id/edit_filter_name"
                android:paddingEnd="4dp"
                android:paddingStart="8dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_filter_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/hint_filter_by_phone"
                android:inputType="phone"
                android:paddingEnd="4dp"
                android:paddingStart="8dp"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/image_clear"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="4dp"
                android:src="@drawable/ic_x"
                android:visibility="invisible"
                tools:ignore="ContentDescription"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_filter_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_count"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:padding="4dp"
                tools:text="[0]" />

            <Spinner
                android:id="@+id/spinner_teacher"
                android:layout_width="match_parent"
                android:layout_height="56dp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:paddingBottom="72dp" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
